--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -73,6 +73,7 @@
       margin-bottom: 0.5rem;
       max-width: 600px;
       opacity: 0.9;
+      color:#ddd
     }
     
     .user-profile {
@@ -596,7 +597,7 @@
       .product-price {
         font-size: 1.4rem;
         font-weight: 700;
-        color: #4a90e2;
+        color:#4cae4c;
         margin-bottom: 0.75rem;
         display: flex;
         align-items: center;
